@@ -1,3 +1,12 @@
+2006-03-21  Darin Adler  <darin@apple.com>
+
+        - fix buildbot (and everyone else)
+
+        * bindings/js/JSDOMCore.cpp: Touch, because Adele's change adds a virtual function,
+        and Xcode doesn't know this needs recompiling.
+        * bindings/js/JSDOMEvents.cpp: Ditto.
+        * bindings/js/JSDOMHTML.cpp: Ditto.
+
 2006-03-21  Justin Haygood and Bjoern Graf  <jhaygood@spsu.edu> <bjoern.graf@gmail.com>
 
         Reviewed by Eric and Darin.
